# mememathics-erdos23

./: README.md  pyproject.toml
.bootstrap/: chunk00  chunk01  chunk02  chunk03  chunk04  chunk05  chunk06  chunk07  extract.py
.github/workflows/: bootstrap-agent.yml  bootstrap.yml  test.yml
artifacts/rejected-conjectures/: component-tau-n12.md
docs/: approach-registry.md  cactus-case.md  cut-metric-criterion.md  gamma-reduction.md  problem.md  status.md  tree-case.md
scripts/: enumerate_atlas_gamma.py  verify_tau_counterexample.py
src/mememathics_erdos23/: __init__.py  cactus_case.py  cut_metric.py  gamma.py  rejected_tau.py  tree_case.py
tests/: test_gamma.py
